* Thalguur
** Change: Call of Gold is now a personal alert (beam)
** Change: Curse of Greed is now a personal alert.

Hammerknell
* Akylios
** Change: Added Jornaru's percentage monitoring to Phase 3 in case Phase 4 doesn't trigger.
** Fix: Breath of Madness duration setting. It was stuck in the enabled state.

Rise of the Phoenix
* High Priest Arakhurn
** Change: Add count for Phase transition up to 8

German Translations

Festung Hammerhall
* Sicaron
** New: Seelenernte
* Grugonim
** New: Nekrotischer Atem Dauer
* Estrode
** New: Tanzender Stahl Dauer
* Akylios
** New: Hauch des Wahnsinns Dauer

Seelenfluss
* Dark Foci
** New: Sturmverderbnis

Russian Translations
* New: Various Menu Options.

Крепость Молотозвона
* New: Мурдантикс
** New: Калечащий удар
** New: Свирепый удар
** New: Демонический Взрыв
** New: Травма души
* New: Старуха Замира
** New: Мерзейший взрыв
** New: Знак забвения
** New: Омерзительный гной
* New: Душераздиратель Зилас
** New: Хватка душедера
* New: Рунный король Молинар & Принц Доллин
** New: Прервать жизнь
** New: Поглощающая сущность
** New: Рунический вампиризм
** New: Пугающий крик
** New: Проклятые удары
** New: Бестелесный восставший
* New: Эстрода
** New: Захват души
** New: Контрол разума
** New: Ярость севера
* New: Владмал Прайм
** New: Древние огни
* New: Сикарон
** New: Смертоностное проклятие
** New: Тлеющее увядание
** New: Нечестивый договор
** New: Сбор души
* New: Гругоним
** New: Материализованная Смерть
** New: Бурное разложение
** New: Едкая желчь
** New: Мертвящее дыхание
** New: Останавливающий сердце яд
* New: Инквизитор Гарау
** New: Магическая эссения
** New: Кровавая волна
** New: Ледниковый щит
** New: Привратник Магической Руки
* New: Инвар Темная Волна
** New: Денизар
** New: Акваликс
** New: Подводное течение
** New: Гнилая челюсть
** New: Зловонный слизень
** New: Страж прилива

Rise of the Phoenix
* New: Эреандорн
** New: Опасное сгорание
** New: Извержение лавы
** New: Извержение вулкана
* New: Беругаст