@@ -28,7 +28,9 @@ Hammerknell
 
 Rise of the Phoenix
 * High Priest Arakhurn
-** Change: Add count for Phase transition up to 8
+** Change: Reduced timer for first Fiery Metamorphosis in Phase 3 slightly.
+** Change: Reduced timer for frist Add in Phase 3 slightly.
+** Change: The timers for Enraged Spawns of Arakhurn will now trigger on death. (dynamic)
 
 German Translations
 
